test/Harper/Tests/Good/issue007_ass.har
fun :: Integer -> Integer;
fun n = {
  var (y :: Integer) = n;
  var (n :: Integer) = n;
  n *= 2;
  return y;
};

main :: Integer;
main = fun 42;