test/Harper/Tests/Bad/issue016_definiteAssignment.har
main :: Integer;
main = {
  var (x :: Integer);
  return x;
};